--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ python-decouple==3.8
 django-crispy-forms==2.0
 crispy-bootstrap4==2022.1
 django-widget-tweaks==1.5.0
+django-environ==0.12.0
+dnspython>=1.16.0
