--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ django-widget-tweaks==1.5.0
 django-environ==0.12.0
 dnspython>=1.16.0
 gunicorn==21.2.0
+whitenoise==6.6.0
+dj-database-url==2.3.0
+psycopg2-binary==2.9.9
+gunicorn==21.2.0
