--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==4.2.7
 pymongo==4.6.0
-Pillow==10.1.0
+Pillow>=10.3.0
 python-decouple==3.8
 django-crispy-forms==2.0
 crispy-bootstrap4==2022.1
